--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,8 +4,8 @@
 
 // Colors
 
-$blue: #0000A0;
-$blueLight: #5A5AFA;
+$blue: #3c64ff;
+$blueLight: #3c64ff99;
 // Grays
 $black: #000;
 $darkerGray: #222;
@@ -13,7 +13,10 @@ $darkGray: #333;
 $gray: #666;
 $lightGray: #eee;
 $lighterGray: #f6f6f6;
+$newgray: #7f8b99;
 $white: #fff;
+$topb: #070c1f;
+$topw: #f9faff;
 
 // Font stacks
 @font-face {
