--- a/style.scss
+++ b/style.scss
@@ -45,7 +45,7 @@ body {
 
 .begender {
   p {
-    font-size: 0.8em;
+    font-size: 0.9em;
     line-height: 1.2em;
     color: $blue;
   }
@@ -55,9 +55,12 @@ body {
 }
 .avatar {
   float: left;
-  width: 70px;
-  height: 70px;
-  margin: 5px 5px 0px 0px;
+  width: 50px;
+  height: 50px;
+  margin: 0px 5px 0px 0px;
+  img {
+    border-radius: 5px;
+  }
 }
 .topright {
   float: right;
