--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
 
 <body>
 
-<div class="begend"><div class="begender"><a href="/" class="avatar"><img src="/icon.dark.png"></a><div class="topright">{% for item in site.data.main.nav %}<a href="{{ site.url }}{{ item.url }}"{% if item.url == '/' %}{% if page.lang=='en' %} class="bold"{% endif %}{% else %}{% capture navlang %}/{{ page.lang }}/{% endcapture %}{% if item.url contains navlang %} class="bold"{% endif %}{% endif %}>{{ item.title }}</a>{% endfor %}</div>{{ site.data.main.[pagedescr] | markdownify }}</div></div>
+<div class="begend"><div class="begender"><a href="/" class="avatar"><img src="/icon.dark.png"></a><div class="topright">{% for item in site.data.main.nav %}&nbsp;<a href="{{ site.url }}{{ item.url }}"{% if item.url == '/' %}{% if page.lang=='en' %} class="bold"{% endif %}{% else %}{% capture navlang %}/{{ page.lang }}/{% endcapture %}{% if item.url contains navlang %} class="bold"{% endif %}{% endif %}>{{ item.title }}</a>{% endfor %}</div>{{ site.data.main.[pagedescr] | markdownify }}</div></div>
 
 <div class="wrapper-masthead"><div class="container"><header class="masthead clearfix">
 
