--- a/style.scss
+++ b/style.scss
@@ -14,342 +14,298 @@
 /**************/
 
 html {
-  font-size: 100%;
+	font-size: 100%;
 }
 
 body {
-  font-family: $font;
-  background: $white;
-  color: $darkGray;
-  
-  @include dark-mode {
-    background: $black;
-    color: $lightGray;
-  }
+	font-family: $font;
+	background: $white;
+	color: $darkGray;
+	
+	@include dark-mode {
+		background: $black;
+		color: $lightGray;
+	}
 }
 
 .begender, .header, .entry, article > nav, article > footer {
-  max-width: 700px;
-  margin: auto;
+	max-width: 700px;
+	margin: auto;
 }
 
 .begend {
-  background-color: $topw;
-  border-top: 1px solid $blue;
-  border-bottom: 1px solid $blue;
-
-  @include dark-mode {
-    background-color: $topb;
-  }
+	background-color: $topw;
+	border-top: 1px solid $blue;
+	border-bottom: 1px solid $blue;
+	
+	@include dark-mode {
+		background-color: $topb;
+	}
 }
 
 .begender {
-  p {
-    font-size: 0.9em;
-    line-height: 1.2em;
-    color: $blue;
-  }
-  a {
-    color: $blue;
-    text-decoration: underline;
-  }
+	p {
+		font-size: 0.9em;
+		line-height: 1.2em;
+		color: $blue;
+		margin: 5px;
+	}
+	a {
+		color: $blue;
+		text-decoration: underline;
+		&:hover, &:active {
+			color: $blueLight;
+		}
+	}
 }
+
 .avatar {
-  float: left;
-  width: 50px;
-  height: 50px;
-  margin: 0px 5px 0px 0px;
-  img {
-    border-radius: 5px;
-  }
+	float: left;
+	width: 50px;
+	height: 50px;
+	margin: 0px 5px;
+	img {
+		border-radius: 5px;
+	}
 }
+
 .topright {
-  float: right;
-  a {
-    text-decoration: none;
-  }
+	float: right;
+	margin: 0px 5px;
+	a {
+		text-decoration: none;
+	}
 }
 
-
-
-
-.container {
-  margin: 0 auto;
-  max-width: 740px;
-  padding: 0 10px;
-  width: 100%;
+.center {
+	text-align: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: $darkerGray;
-  font-weight: bold;
-  margin: 0.5em 0;
-
-  @include dark-mode {
-    color: $lighterGray;
-  }
-
+	color: $darkerGray;
+	font-weight: 400;
+	line-height: 1.2em;
+	@include dark-mode {
+		color: $lighterGray;
+	}
 }
 
 h1 {
-  font-size: 2.5em;
-  a {
-    color: inherit;
-  }
+	font-size: 2.5em;
 }
 
 h2 {
-  font-size: 1.8em;
+	font-size: 1.8em;
 }
 
 h3 {
-  font-size: 1.4em;
+	font-size: 1.4em;
 }
 
 h4 {
-  font-size: 1.2em;
-  color: $gray;
+	font-size: 1.2em;
+	color: $gray;
 }
 
-p {
-  margin: 1em 0;
+
+.header {
+	text-align: center;
+	color: $white;
+	a {
+		text-decoration: none;
+		color: $white;
+	}
+	h1, h2, h3 {
+		text-shadow: 2px 2px 4px $black;
+	}
 }
 
-a {
-  color: $blue;
-  text-decoration: none;
-  cursor: pointer;
-  &:hover, &:active {
-    color: $blue;
-  }
-  @include dark-mode {
-    color: $blueLight;
-  }
-
+.headerblack {
+	color: $black;
+	@include dark-mode {
+		color: $white;
+	}
+	a {
+		color: $black;
+		@include dark-mode {
+			color: $white;
+		}
+	}
 }
 
-ul, ol {
-  margin: 15px 0;
-  padding-left: 30px;
+header {
+	padding: 1em 0;
 }
 
-ul {
-  list-style-type: disc;
-}
-
-ol {
-  list-style-type: decimal;
-}
-
-ol ul, ul ol, ul ul, ol ol {
-  margin: 0;
-}
-
-ul ul, ol ul {
-  list-style-type: circle;
-}
-
-em, i {
-  font-style: italic;
-}
-
-strong, b {
-  font-weight: bold;
-}
-
-.bold {
-  font-weight: bold;
-}
-sup {
-  vertical-align: super;
-  font-size: smaller;
-}
-.footnotes {
-  border-top: 1px solid $gray;
-}
-blockquote {
-  margin: 1em;
-  border: 2px solid $gray;
-  padding: 0.1em 1em;
-  color: $gray;
-  font-family: $fontserif;
-  font-style: italic;
-  transform: rotate(-2deg);
-}
-
-img {
-  max-width: 100%;
-  @include dark-mode {
-    opacity: .75;
-    transition: opacity .5s ease-in-out;
-    &:hover { opacity: 1; }
-  }
-}
-
-// Fixes images in popup boxes from Google Translate
-.gmnoprint img {
-  max-width: none;
+.entry {
+	
+	a {
+		color: $blue;
+		text-decoration: none;
+		cursor: pointer;
+		&:hover, &:active {
+			color: $blueLight;
+			@include dark-mode {
+				color: $blue;
+			}
+		}
+		@include dark-mode {
+			color: $blueLight;
+		}
+		background-image: linear-gradient(transparent 70%, rgb(255, 245, 196) 0px);
+		background-position: 4px bottom;
+		background-repeat: no-repeat;
+	}
+	
+	img + em {
+		color: $newgray;
+		display: block;
+		text-align: center;
+	}
 }
 
 .date {
-  font-style: italic;
-  color: $gray;
+	color: $newgray;
+	font-size: 0.8em;
+	font-style: italic;
+}
+
+ul, ol {
+	margin: 15px 0;
+	padding-left: 30px;
+}
+
+ul {
+	list-style-type: disc;
+}
+
+ol {
+	list-style-type: decimal;
+}
+
+ol ul, ul ol, ul ul, ol ol {
+	margin: 0;
+}
+
+ul ul, ol ul {
+	list-style-type: circle;
+}
+
+em, i {
+	font-style: italic;
+}
+
+strong, b, .bold {
+	font-weight: bold;
+}
+
+sup {
+	vertical-align: super;
+	font-size: smaller;
+}
+
+.footnotes {
+	border-top: 1px solid $gray;
+}
+
+blockquote {
+	margin: 1em;
+	border: 2px solid $gray;
+	padding: 0.1em 1em;
+	color: $gray;
+	font-family: $fontserif;
+	font-style: italic;
+	transform: rotate(-2deg);
+}
+
+img {
+	max-width: 100%;
+	@include dark-mode {
+		opacity: .75;
+		transition: opacity .5s ease-in-out;
+		&:hover { opacity: 1; }
+	}
 }
 
 // Specify the color of the selection
 ::-moz-selection {
-  color: $black;
-  background: $lightGray;
+	color: $black;
+	background: $lightGray;
 }
 ::selection {
-  color: $black;
-  background: $lightGray;
-}
-
-// Nicolas Gallagher's micro clearfix hack
-// http://nicolasgallagher.com/micro-clearfix-hack/
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
-
-.clearfix:after {
-    clear: both;
+	color: $black;
+	background: $lightGray;
 }
 
 //Fixes for responsive video embed
 //https://avexdesigns.com/responsive-youtube-embed
 .embed-container {
-  position: relative;
-  padding-bottom: 56.25%;
-  padding-top: 30px; height: 0; overflow: hidden;
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 30px; height: 0; overflow: hidden;
 }
 
 .embed-container iframe,
 .embed-container object,
 .embed-container embed {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
-
-/*********************/
-/* LAYOUT / SECTIONS */
-/*********************/
-
-//
-// .masthead
-//
-
-.wrapper-masthead {
-  margin-bottom: 50px;
-}
-
-.masthead {
-  padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
-
-  @include mobile {
-    text-align: center;
-  }
-}
-
-.site-avatar {
-  float: left;
-  width: 70px;
-  height: 70px;
-  margin-right: 15px;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
-
-  img {
-    border-radius: 5px;
-  }
-}
-
-.site-info {
-  float: left;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
-}
-
-.site-name {
-  margin: 0;
-  color: $darkGray;
-  cursor: pointer;
-  font-weight: 300;
-  font-size: 28px;
-  letter-spacing: 1px;
-  @include dark-mode {
-    color: $lightGray;
-  }
-
-}
-
-.site-description {
-  margin: -5px 0 0 0;
-  color: $gray;
-  font-size: 16px;
-
-  @include mobile {
-    margin: 3px 0;
-  }
-}
-
 
 #search-container {
-  clear: left;
-  float: left;
-  padding: 5px 0px;
-  position: relative;
-  width: 300px;
+	clear: left;
+	float: left;
+	padding: 5px 0px;
+	position: relative;
+	width: 300px;
 }
 
 #search-input {
-  background-color: $lighterGray;
-  border: 1px solid $lightGray;
-  color: $darkGray;
-  padding: 2px;
-  font-size: 1.2em;
-  margin: 0;
-  width: inherit;
+	background-color: $lighterGray;
+	border: 1px solid $lightGray;
+	color: $darkGray;
+	padding: 2px;
+	font-size: 1.2em;
+	margin: 0;
+	width: inherit;
+	@include dark-mode {
+		background-color: $darkerGray;
+		border: 1px solid $darkGray;
+		color: $lightGray;
+	}
 }
 
 #search-results {
-  position: absolute;
-  top: auto;
-  z-index: 100;
-  margin: 0;
-  padding: 0px;
-  list-style: none;
+	position: absolute;
+	top: auto;
+	z-index: 100;
+	margin: 0;
+	padding: 0px;
+	list-style: none;
 }
 
 #search-results li {
-  padding: 5px;
-  background: $lighterGray;
+	padding: 5px;
+	background: $lighterGray;
+	@include dark-mode {
+		background: $darkerGray;
+	}
 }
 
 @media screen and (max-width: 640px) {
-  #search-container {
-    clear: none;
-    float: none;
-    margin : 0 auto;
-  }
-  #search-results li {
-    text-align: left;
-  }
+	#search-container {
+		clear: none;
+		float: none;
+		margin : 0 auto;
+	}
+	#search-results li {
+		text-align: left;
+	}
 }
+
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: $gray;
   opacity: 1; /* Firefox */
@@ -363,107 +319,14 @@ img {
   color: $gray;
 }
 
-@media (prefers-color-scheme: dark) {
-  #search-input {
-    background-color: $darkerGray;
-    border: 1px solid $darkGray;
-    color: $lightGray;
-  }
-  #search-results li {
-    background: $darkerGray;
-  }
-}
-
-nav {
-  float: right;
-  margin-top: 9px;
-  font-size: 18px;
-
-  @include mobile {
-    float: none;
-    margin-top: 9px;
-    display: block;
-    font-size: 16px;
-  }
-
-  a {
-    margin-left: 20px;
-    text-align: right;
-    font-weight: 300;
-    letter-spacing: 1px;
-
-    @include mobile {
-      margin: 0 10px;
-    }
-  }
-}
-
-.nav_post {
-  display: block;
-  width: auto;
-  overflow: hidden;
-  
-  a {
-    display: block;
-    width: 50%;
-    float: left;
-    margin: 1em 0;
-    padding: 0 1em;
-
-    @include mobile {
-      float: none;
-      width: 100%;
-      text-align: center;
-    }
-
-  }
-  
-  .next {
-    text-align: right;
-
-    @include mobile {
-      text-align: center;
-    }
-
-  }
-}
-
-//
-// .main
-//
-
 .posts > .post {
-  padding-bottom: 2em;
-  border-bottom: 1px solid $lightGray;
+	padding-bottom: 2em;
+	border-bottom: 1px solid $lightGray;
 }
 
 .posts > .post:last-child {
-  padding-bottom: 1em;
-  border-bottom: none;
-}
-
-.post {
-
-  .read-more {
-    text-transform: uppercase;
-    font-size: 1.2em;
-  }
-}
-
-.wrapper-footer {
-  margin-top: 50px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
-  @include dark-mode {
-    background-color: $darkGray;
-  }
-
-}
-
-footer {
-  padding: 20px 0;
-  text-align: center;
+	padding-bottom: 1em;
+	border-bottom: none;
 }
 
 @import "highlights";
