--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,8 +1,6 @@
 ---
-layout: default
+layout: page
 ---
-
-<h1>{{ page.title }}</h1>
 
 {{ content }}
 
@@ -11,8 +9,6 @@ layout: default
 
 {% assign postsByYear = site.categories.[langlang] | group_by_exp:"post", "post.date | date: '%Y'" %}
 {% for year in postsByYear %}
-
-<div class="archive">
 <h2>{{ year.name }}</h2>
   {% if langlang == 'en' %}
     {% assign postsByMonth = year.items | group_by_exp:"post", "post.date | date: '%B'" %}
@@ -32,5 +28,4 @@ layout: default
       <div class="date">{% include lang.date.html date=post.date %}</div>
     {% endfor %}
   {% endfor %}
-</div>
 {% endfor %}
