Final fixes to styles for now

--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <article class="page">
-<div class="entry">
+<div class="entry center">
 	{% include tags.html %}
 </div>
 <header><div class="header headerblack">
