--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -3,11 +3,9 @@ layout: default
 ---
 
 <article class="page">
-<div class="entry center">
-	{% include tags.html %}
-</div>
+{% include tags.html %}
 <header><div class="header headerblack">
-	<h1>{{ tag_title }}</h1>
+	<h1>{{ tag_emoji }} {{ tag_title }}</h1>
 </div></header>
 <div class="entry">
 	{{ tag_subtitle | markdownify }}
