--- a/_layouts/atom.html
+++ b/_layouts/atom.html
@@ -1,5 +1,5 @@
 ---
-layout: null
+layout: nil
 ---
 {% include lang.html %}{% capture pagetitle %}title{{ langvar }}{% endcapture %}{% capture pagedescr %}descr{{ langvar }}{% endcapture %}{% capture pagename %}name{{ langvar }}{% endcapture %}{% capture pagelocale %}locale{{ langvar }}{% endcapture %}<?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
