--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,8 @@ layout: default
 	{{ content }}
 </div>
 <footer>
-	<div class="date">{% include lang.date.html date=page.date %}</div>
+	{% include lang.date.html date=page.date %}
+	<div class="date">{{ langdate }}</div>
 	{% capture share %}share{{ langvar }}{% endcapture %}
 	{% capture tweet %}sharet{{ langvar }}{% endcapture %}
 	<h3>{{ site.data.main.[share] }}: <a href="{{ site.url }}{{ page.url }}">{{ site.data.main.domain }}{{ page.url }}</a></h3>
