--- a/style.scss
+++ b/style.scss
@@ -167,6 +167,9 @@ article > nav {
 		padding: 0.8em 0 0.2em;
 		font-size: 1.2em;
 	}
+	ul, ol {
+		font-size: 1.2em;
+	}
 	img + em {
 		color: $newgray;
 		display: block;
