--- a/style.scss
+++ b/style.scss
@@ -168,7 +168,7 @@ article > nav {
 		font-size: 1.2em;
 	}
 	ul, ol {
-		font-size: 1.2em;
+		font-size: 1.2rem;
 	}
 	img + em {
 		color: $newgray;
