Product Hunt ad

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@
 		{{ site.data.main.[pagedescr] | markdownify }}
 	</div>
 </div>
-
+{% include ad.html text="Nozbe Teams is launching today on Product Hunt!" link="https://www.producthunt.com/posts/nozbe-teams" %}
 {{ content }}
 
 <div class="begend" id="footer">
