--- a/_includes/ad.html
+++ b/_includes/ad.html
@@ -4,6 +4,6 @@ Inserting an AD site-wide
 and put it in default.hml in line 74
 {% endcomment %}
 <div class="begend" id="footer">
-	<div class="begender center"><p><a href="{{ include.link }}">{{ include.text }}</a></p>
+	<div class="begender center"><p>🥳 ✅ <a href="{{ include.link }}">{{ include.text }}</a> 🙏 👍</p>
 	</div>
 </div>
