fixes to styles blue borders

--- a/_includes/ad.html
+++ b/_includes/ad.html
@@ -3,7 +3,7 @@ Inserting an AD site-wide
 {% include ad.html text="Nozbe Teams is launching today on Product Hunt!" link="https://www.producthunt.com/posts/nozbe-teams" %}
 and put it in default.hml in line 74
 {% endcomment %}
-<div class="begend" id="footer">
+<div class="begend" id="ad">
 	<div class="begender center"><p>🥳 ✅ <a href="{{ include.link }}">{{ include.text }}</a> 🙏 👍</p>
 	</div>
 </div>
