testing alt dark style by radek

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,8 +4,8 @@
 
 // Colors
 
-$blue: #3c64ff;
-$blueLight: #3c64ff99;
+$blue: #8599f8;//#3c64ff;
+$blueLight: #8599f899;//#3c64ff99;
 $black: #000;
 $darkerGray: #222;
 $darkGray: #333;
@@ -14,8 +14,10 @@ $lightGray: #eee;
 $lighterGray: #f6f6f6;
 $newgray: #7f8b99;
 $white: #fff;
-$topb: #070c1f;
+$topb: #080c1e;//#070c1f;
 $topw: #f9faff;
+$bqb: #353535;
+$bqt: #b5b5b5;
 
 // Font stacks
 @font-face {
